# emergency-yt-insights

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  korean_air.ipynb  main.py  pyproject.toml  pytest.ini  requirements.txt  test.ipynb
backend/data/: korean-plane-crash.json  topics_conv_dem.csv
backend/src/: api_utils.py  classifiers.py  crud.py  generate.py  global_settings.py  text_splitter.py  topic_modeling.py  utils.py  vectordb.py  youtube.py
backend/tests/: test_classifiers.py  test_preprocessors.py
backend/topic_models/model-v1/: config.json  topic_embeddings.safetensors  topics.json
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/videos/: page.tsx
frontend/src/app/visualize/: page.tsx
frontend/src/components/: Chat.tsx  Diagrams.tsx  app-sidebar.tsx  extract-form.tsx  footer.tsx  visualizations.tsx
frontend/src/components/ui/: text-generation.tsx  user-input.tsx
frontend/src/hooks/: use-analysis.ts  use-data.ts  use-extactor.ts  use_collections.ts
frontend/src/lib/: fetchData.ts  hooks.ts  page.tsx  sample_collections.json  typings.d.ts
frontend/src/pages/: extraction_page.tsx
